# node-based-image-processor

./: BlendNode.cpp  BlendNode.h  BlurNode.cpp  BlurNode.h  BrightnessContrastNode.cpp  BrightnessContrastNode.h  CMakeLists.txt  ColorChannelNode.cpp  ColorChannelNode.h  ConnectionItem.cpp  ConnectionItem.h  ConvolutionFilterNode.cpp  ConvolutionFilterNode.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  ImageInputNode.cpp  ImageInputNode.h  Node.h  NodeEditor.cpp  NodeEditor.h  NodeItem.cpp  NodeItem.h  NodeScene.cpp  NodeScene.h  NoiseGenerationNode.cpp  NoiseGenerationNode.h  OutputNode.cpp  OutputNode.h  README.md  ThresholdNode.cpp  ThresholdNode.h  c_cpp_properties.json  main.cpp  mainwindow.cpp  mainwindow.h
